Agegado de archivos faltantes

--- a/ETL/Data Quality Engineer.ipynb
+++ b/ETL/Data Quality Engineer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar la ruta del archivo.\n",
-    "ruta = 'Test Técnico R5/Datasets/taylor_swift_spotify.json'\n",
+    "# La ruta '../' se utiliza para retroceder un nivel desde la carpeta \"ETL\" y poder acceder a la carpeta \"Datasets\".\n",
+    "ruta = '../Datasets/taylor_swift_spotify.json'\n",
     "\n",
     "# Guardar la información del archivo en un DataFrame.\n",
     "dataset_to_transform = pd.read_json(ruta)"
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
        "4  {'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,17 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar el contenido del DataFrame en un nuevo archivo con extensión CSV.\n",
-    "dataset_to_transform.to_csv('dataset.csv', index = False)"
+    "dataset_to_transform.to_csv('../Datasets/dataset.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,14 +221,14 @@
        "4  {'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Abrir el nuevo arhivo de extensión CSV en un nuevo DataFrame.\n",
-    "dataset = pd.read_csv('dataset.csv')\n",
+    "dataset = pd.read_csv('../Datasets/dataset.csv')\n",
     "\n",
     "# Visualizar el DataFrame nuevamente para asegurarnos que la información se haya guardado correctamente.\n",
     "dataset.head()"
