Archivos agregados y modificados

--- a/ETL/Data Quality Engineer.ipynb
+++ b/ETL/Data Quality Engineer.ipynb
@@ -7,27 +7,12 @@
    "outputs": [],
    "source": [
     "# Importar las librerías correspondientes.\n",
-    "import json \n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Guardar la ruta del archivo.\n",
-    "# La ruta '../' se utiliza para retroceder un nivel desde la carpeta \"ETL\" y poder acceder a la carpeta \"Datasets\".\n",
-    "ruta = '../Datasets/taylor_swift_spotify.json'\n",
-    "\n",
-    "# Guardar la información del archivo en un DataFrame.\n",
-    "dataset_to_transform = pd.read_json(ruta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -93,135 +78,225 @@
        "      <td>120</td>\n",
        "      <td>{'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '151w1FgRZfnKZA9FEcg9Z3', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '6kZ42qRrzov54LcAk4onW9', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '4hDok0OAJd57SGIT8xuWJH', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '6AORtDjduMM3bupSWzbTSG', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '2Xoteh7uEpea4TohMxjtaq', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '0PZ7lAru5FDFHuirTkWe9Z', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1pzvBxYgT6OVwJLtHkrdQK', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '2fenSS68JI1h4Fo296JfGr', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1NAmidJlEaVgA3MpcPFYGq', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1NAmidJlEaVgA3MpcPFYGq', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '6DEjYFkNZh67HP7R9PSZvv', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1MPAXuTVL2Ej5x0JHiSPq8', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1yGbNOtRIgdIiGHOEBaZWf', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '5fy0X0JmZRZnVa2UEicIOl', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1KVKqWeRuXsJDLTW0VuD29', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '6fyR4wBPwLHKcRtxgd4sGh', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '6Ar2o9KCqcyYF9J0aQP3au', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '6S6JQWzUrJVcJLK4fi74Fw', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '2gP2LMVcIFgVczSJqn340t', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '08CWGiv27MVQhYpuTtvx83', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '1ycoesYxIFymXWebfmz828', 'album_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>06HL4z0CvFAxyc27GX</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "      <td>120</td>\n",
+       "      <td>{'album_id': '5eyZZoQEFQWRHkV2xgAeBw', 'album_...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            artist_id   artist_name  artist_popularity   \n",
-       "0  06HL4z0CvFAxyc27GX  Taylor Swift                120  \\\n",
-       "1  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "2  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "3  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "4  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "             artist_id   artist_name  artist_popularity   \n",
+       "0   06HL4z0CvFAxyc27GX  Taylor Swift                120  \\\n",
+       "1   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "2   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "3   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "4   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "5   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "6   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "7   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "8   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "9   06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "10  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "11  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "12  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "13  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "14  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "15  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "16  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "17  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "18  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "19  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "20  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "21  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "22  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "23  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "24  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "25  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
+       "26  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
        "\n",
-       "                                              albums  \n",
-       "0  {'album_id': '1o59UpKw81iHR0HPiSkJR0', 'album_...  \n",
-       "1  {'album_id': '64LU4c1nfjz1t4VnGhagcg', 'album_...  \n",
-       "2  {'album_id': '5AEDGbliTTfjOB8TSm1sxt', 'album_...  \n",
-       "3  {'album_id': '1fnJ7k0bllNfL1kVdNVW1A', 'album_...  \n",
-       "4  {'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...  "
+       "                                               albums  \n",
+       "0   {'album_id': '1o59UpKw81iHR0HPiSkJR0', 'album_...  \n",
+       "1   {'album_id': '64LU4c1nfjz1t4VnGhagcg', 'album_...  \n",
+       "2   {'album_id': '5AEDGbliTTfjOB8TSm1sxt', 'album_...  \n",
+       "3   {'album_id': '1fnJ7k0bllNfL1kVdNVW1A', 'album_...  \n",
+       "4   {'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...  \n",
+       "5   {'album_id': '151w1FgRZfnKZA9FEcg9Z3', 'album_...  \n",
+       "6   {'album_id': '6kZ42qRrzov54LcAk4onW9', 'album_...  \n",
+       "7   {'album_id': '4hDok0OAJd57SGIT8xuWJH', 'album_...  \n",
+       "8   {'album_id': '6AORtDjduMM3bupSWzbTSG', 'album_...  \n",
+       "9   {'album_id': '2Xoteh7uEpea4TohMxjtaq', 'album_...  \n",
+       "10  {'album_id': '0PZ7lAru5FDFHuirTkWe9Z', 'album_...  \n",
+       "11  {'album_id': '1pzvBxYgT6OVwJLtHkrdQK', 'album_...  \n",
+       "12  {'album_id': '2fenSS68JI1h4Fo296JfGr', 'album_...  \n",
+       "13  {'album_id': '1NAmidJlEaVgA3MpcPFYGq', 'album_...  \n",
+       "14  {'album_id': '1NAmidJlEaVgA3MpcPFYGq', 'album_...  \n",
+       "15  {'album_id': '6DEjYFkNZh67HP7R9PSZvv', 'album_...  \n",
+       "16  {'album_id': '1MPAXuTVL2Ej5x0JHiSPq8', 'album_...  \n",
+       "17  {'album_id': '1yGbNOtRIgdIiGHOEBaZWf', 'album_...  \n",
+       "18  {'album_id': '5fy0X0JmZRZnVa2UEicIOl', 'album_...  \n",
+       "19  {'album_id': '1KVKqWeRuXsJDLTW0VuD29', 'album_...  \n",
+       "20  {'album_id': '6fyR4wBPwLHKcRtxgd4sGh', 'album_...  \n",
+       "21  {'album_id': '6Ar2o9KCqcyYF9J0aQP3au', 'album_...  \n",
+       "22  {'album_id': '6S6JQWzUrJVcJLK4fi74Fw', 'album_...  \n",
+       "23  {'album_id': '2gP2LMVcIFgVczSJqn340t', 'album_...  \n",
+       "24  {'album_id': '08CWGiv27MVQhYpuTtvx83', 'album_...  \n",
+       "25  {'album_id': '1ycoesYxIFymXWebfmz828', 'album_...  \n",
+       "26  {'album_id': '5eyZZoQEFQWRHkV2xgAeBw', 'album_...  "
       ]
      },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Visualizar el DataFrame para entender su contenido.\n",
-    "dataset_to_transform.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Guardar el contenido del DataFrame en un nuevo archivo con extensión CSV.\n",
-    "dataset_to_transform.to_csv('../Datasets/dataset.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>artist_id</th>\n",
-       "      <th>artist_name</th>\n",
-       "      <th>artist_popularity</th>\n",
-       "      <th>albums</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>06HL4z0CvFAxyc27GX</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "      <td>120</td>\n",
-       "      <td>{'album_id': '1o59UpKw81iHR0HPiSkJR0', 'album_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>06HL4z0CvFAxyc27GX</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "      <td>120</td>\n",
-       "      <td>{'album_id': '64LU4c1nfjz1t4VnGhagcg', 'album_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>06HL4z0CvFAxyc27GX</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "      <td>120</td>\n",
-       "      <td>{'album_id': '5AEDGbliTTfjOB8TSm1sxt', 'album_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>06HL4z0CvFAxyc27GX</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "      <td>120</td>\n",
-       "      <td>{'album_id': '1fnJ7k0bllNfL1kVdNVW1A', 'album_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>06HL4z0CvFAxyc27GX</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "      <td>120</td>\n",
-       "      <td>{'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            artist_id   artist_name  artist_popularity   \n",
-       "0  06HL4z0CvFAxyc27GX  Taylor Swift                120  \\\n",
-       "1  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "2  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "3  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "4  06HL4z0CvFAxyc27GX  Taylor Swift                120   \n",
-       "\n",
-       "                                              albums  \n",
-       "0  {'album_id': '1o59UpKw81iHR0HPiSkJR0', 'album_...  \n",
-       "1  {'album_id': '64LU4c1nfjz1t4VnGhagcg', 'album_...  \n",
-       "2  {'album_id': '5AEDGbliTTfjOB8TSm1sxt', 'album_...  \n",
-       "3  {'album_id': '1fnJ7k0bllNfL1kVdNVW1A', 'album_...  \n",
-       "4  {'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...  "
-      ]
-     },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +306,7 @@
     "dataset = pd.read_csv('../Datasets/dataset.csv')\n",
     "\n",
     "# Visualizar el DataFrame nuevamente para asegurarnos que la información se haya guardado correctamente.\n",
-    "dataset.head()"
+    "dataset"
    ]
   },
   {
