--- a/ETL/Data Quality Engineer.ipynb
+++ b/ETL/Data Quality Engineer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4  {'album_id': '3lS1y25WAhcqJDATJK70Mq', 'album_...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "26      False        False              False   False"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "Name: albums, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "26  [{'disc_number': 1, 'duration_ms': 210251, 'ex...  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "26     False       False               False               False   False"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "Name: album_name, dtype: bool"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
        "1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
        "Name: tracks, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
        "4  2k0ZEeAqzvYMcx9Qt5aClQ                            4.0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1523,6 +1523,245 @@
    "source": [
     "# Visualizar el nuevo DataFrame para analizar su contenido.\n",
     "data_tracks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copiar la información del DataFrame de 'Tracks' en un DataFrame nuevo,\n",
+    "# para reducirlo a las columnas necesarias.\n",
+    "data_tracks_only = data_tracks\n",
+    "delete_t = ['audio_features.danceability', 'audio_features.energy', 'audio_features.key', 'audio_features.loudness',\n",
+    "          'audio_features.mode', 'audio_features.speechiness', 'audio_features.acousticness', \n",
+    "          'audio_features.instrumentalness', 'audio_features.liveness', 'audio_features.valence',\n",
+    "          'audio_features.tempo', 'audio_features.id', 'audio_features.time_signature']\n",
+    "data_tracks_only = data_tracks_only.drop(delete_t, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>disc_number</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>explicit</th>\n",
+       "      <th>track_number</th>\n",
+       "      <th>track_popularity</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>track_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>212600</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>77</td>\n",
+       "      <td>4WUepByoeqcedHoYhSNHRt</td>\n",
+       "      <td>Welcome To New York (Taylor's Version)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>231833</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0108kcWLnn2HlH2kedi1gn</td>\n",
+       "      <td>Blank Space (Taylor's Version)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>231000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3Vpk1hfMAQme8VJ0SNRSkd</td>\n",
+       "      <td>Style (Taylor's Version)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>235800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78</td>\n",
+       "      <td>1OcSfkeCg9hRC2sFKB4IMJ</td>\n",
+       "      <td>Out Of The Woods (Taylor's Version)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>193289</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5</td>\n",
+       "      <td>77</td>\n",
+       "      <td>2k0ZEeAqzvYMcx9Qt5aClQ</td>\n",
+       "      <td>All You Had To Do Was Stay (Taylor's Version)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   disc_number  duration_ms explicit  track_number  track_popularity   \n",
+       "0            1       212600    False             1                77  \\\n",
+       "1            1       231833    False             2                78   \n",
+       "2            1       231000    False             3                79   \n",
+       "3            1       235800    False             4                78   \n",
+       "4            1       193289    False             5                77   \n",
+       "\n",
+       "                 track_id                                     track_name  \n",
+       "0  4WUepByoeqcedHoYhSNHRt         Welcome To New York (Taylor's Version)  \n",
+       "1  0108kcWLnn2HlH2kedi1gn                 Blank Space (Taylor's Version)  \n",
+       "2  3Vpk1hfMAQme8VJ0SNRSkd                       Style (Taylor's Version)  \n",
+       "3  1OcSfkeCg9hRC2sFKB4IMJ            Out Of The Woods (Taylor's Version)  \n",
+       "4  2k0ZEeAqzvYMcx9Qt5aClQ  All You Had To Do Was Stay (Taylor's Version)  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualizar el nuevo DataFrame.\n",
+    "data_tracks_only.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "disc_number          int64\n",
+       "duration_ms          int64\n",
+       "explicit            object\n",
+       "track_number         int64\n",
+       "track_popularity     int64\n",
+       "track_id            object\n",
+       "track_name          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Analizar tipo de datos en las columnas del nuevo DataFrame.\n",
+    "data_tracks_only.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "disc_number         0\n",
+       "duration_ms         0\n",
+       "explicit            0\n",
+       "track_number        0\n",
+       "track_popularity    0\n",
+       "track_id            4\n",
+       "track_name          3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Revisar los datos nulos.\n",
+    "data_tracks_only.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "disc_number         537\n",
+       "duration_ms         175\n",
+       "explicit            535\n",
+       "track_number        493\n",
+       "track_popularity    466\n",
+       "track_id             25\n",
+       "track_name          206\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Revisar los duplicados por columna. \n",
+    "duplicates_columns = data_tracks_only.apply(lambda x: x.duplicated().sum())\n",
+    "duplicates_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copiar la información del DataFrame de 'Tracks' en un DataFrame nuevo,\n",
+    "# para reducirlo a las columnas necesarias.\n",
+    "data_audio_features = data_tracks\n",
+    "delete_f ="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar las columnas sobrantes.\n",
+    "data_audio_features"
    ]
   }
  ],
