--- a/ETL/Data Quality Engineer.ipynb
+++ b/ETL/Data Quality Engineer.ipynb
@@ -1744,24 +1744,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copiar la información del DataFrame de 'Tracks' en un DataFrame nuevo,\n",
     "# para reducirlo a las columnas necesarias.\n",
     "data_audio_features = data_tracks\n",
-    "delete_f ="
+    "delete_f = ['disc_number', 'duration_ms', 'explicit', 'track_number', 'track_popularity', 'track_name']\n",
+    "data_audio_features = data_audio_features.drop(delete_f, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>audio_features.danceability</th>\n",
+       "      <th>audio_features.energy</th>\n",
+       "      <th>audio_features.key</th>\n",
+       "      <th>audio_features.loudness</th>\n",
+       "      <th>audio_features.mode</th>\n",
+       "      <th>audio_features.speechiness</th>\n",
+       "      <th>audio_features.acousticness</th>\n",
+       "      <th>audio_features.instrumentalness</th>\n",
+       "      <th>audio_features.liveness</th>\n",
+       "      <th>audio_features.valence</th>\n",
+       "      <th>audio_features.tempo</th>\n",
+       "      <th>audio_features.id</th>\n",
+       "      <th>audio_features.time_signature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4WUepByoeqcedHoYhSNHRt</td>\n",
+       "      <td>0.757</td>\n",
+       "      <td>0.610</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-4.840</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0327</td>\n",
+       "      <td>0.00942</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>0.3670</td>\n",
+       "      <td>0.685</td>\n",
+       "      <td>116.998</td>\n",
+       "      <td>4WUepByoeqcedHoYhSNHRt</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0108kcWLnn2HlH2kedi1gn</td>\n",
+       "      <td>0.733</td>\n",
+       "      <td>0.733</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-5.376</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0670</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1680</td>\n",
+       "      <td>0.701</td>\n",
+       "      <td>96.057</td>\n",
+       "      <td>0108kcWLnn2HlH2kedi1gn</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3Vpk1hfMAQme8VJ0SNRSkd</td>\n",
+       "      <td>0.511</td>\n",
+       "      <td>0.822</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>-4.785</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0397</td>\n",
+       "      <td>0.000421</td>\n",
+       "      <td>0.0197</td>\n",
+       "      <td>0.0899</td>\n",
+       "      <td>0.305</td>\n",
+       "      <td>94.868</td>\n",
+       "      <td>3Vpk1hfMAQme8VJ0SNRSkd</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1OcSfkeCg9hRC2sFKB4IMJ</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>0.885</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-5.968</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0447</td>\n",
+       "      <td>-0.000537</td>\n",
+       "      <td>0.000056</td>\n",
+       "      <td>0.3850</td>\n",
+       "      <td>0.206</td>\n",
+       "      <td>92.021</td>\n",
+       "      <td>1OcSfkeCg9hRC2sFKB4IMJ</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2k0ZEeAqzvYMcx9Qt5aClQ</td>\n",
+       "      <td>0.588</td>\n",
+       "      <td>0.721</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-5.579</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0317</td>\n",
+       "      <td>0.000656</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1310</td>\n",
+       "      <td>0.520</td>\n",
+       "      <td>96.997</td>\n",
+       "      <td>2k0ZEeAqzvYMcx9Qt5aClQ</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 track_id audio_features.danceability  audio_features.energy   \n",
+       "0  4WUepByoeqcedHoYhSNHRt                       0.757                  0.610  \\\n",
+       "1  0108kcWLnn2HlH2kedi1gn                       0.733                  0.733   \n",
+       "2  3Vpk1hfMAQme8VJ0SNRSkd                       0.511                  0.822   \n",
+       "3  1OcSfkeCg9hRC2sFKB4IMJ                       0.545                  0.885   \n",
+       "4  2k0ZEeAqzvYMcx9Qt5aClQ                       0.588                  0.721   \n",
+       "\n",
+       "   audio_features.key  audio_features.loudness  audio_features.mode   \n",
+       "0                 7.0                   -4.840                    1  \\\n",
+       "1                 0.0                   -5.376                    1   \n",
+       "2                11.0                   -4.785                    0   \n",
+       "3                 0.0                   -5.968                    1   \n",
+       "4                 0.0                   -5.579                    1   \n",
+       "\n",
+       "   audio_features.speechiness audio_features.acousticness   \n",
+       "0                      0.0327                     0.00942  \\\n",
+       "1                      0.0670                           5   \n",
+       "2                      0.0397                    0.000421   \n",
+       "3                      0.0447                   -0.000537   \n",
+       "4                      0.0317                    0.000656   \n",
+       "\n",
+       "  audio_features.instrumentalness  audio_features.liveness   \n",
+       "0                        0.000037                   0.3670  \\\n",
+       "1                               0                   0.1680   \n",
+       "2                          0.0197                   0.0899   \n",
+       "3                        0.000056                   0.3850   \n",
+       "4                               0                   0.1310   \n",
+       "\n",
+       "   audio_features.valence audio_features.tempo       audio_features.id   \n",
+       "0                   0.685              116.998  4WUepByoeqcedHoYhSNHRt  \\\n",
+       "1                   0.701               96.057  0108kcWLnn2HlH2kedi1gn   \n",
+       "2                   0.305               94.868  3Vpk1hfMAQme8VJ0SNRSkd   \n",
+       "3                   0.206               92.021  1OcSfkeCg9hRC2sFKB4IMJ   \n",
+       "4                   0.520               96.997  2k0ZEeAqzvYMcx9Qt5aClQ   \n",
+       "\n",
+       "   audio_features.time_signature  \n",
+       "0                            4.0  \n",
+       "1                            4.0  \n",
+       "2                            4.0  \n",
+       "3                            4.0  \n",
+       "4                            4.0  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Eliminar las columnas sobrantes.\n",
-    "data_audio_features"
+    "# Visualizar el nuevo DataFrame.\n",
+    "data_audio_features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "track_id                            object\n",
+       "audio_features.danceability         object\n",
+       "audio_features.energy              float64\n",
+       "audio_features.key                 float64\n",
+       "audio_features.loudness            float64\n",
+       "audio_features.mode                  int64\n",
+       "audio_features.speechiness         float64\n",
+       "audio_features.acousticness         object\n",
+       "audio_features.instrumentalness     object\n",
+       "audio_features.liveness            float64\n",
+       "audio_features.valence             float64\n",
+       "audio_features.tempo                object\n",
+       "audio_features.id                   object\n",
+       "audio_features.time_signature      float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Analizar tipo de datos en las columnas del nuevo DataFrame.\n",
+    "data_audio_features.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "track_id                           4\n",
+       "audio_features.danceability        1\n",
+       "audio_features.energy              2\n",
+       "audio_features.key                 1\n",
+       "audio_features.loudness            2\n",
+       "audio_features.mode                0\n",
+       "audio_features.speechiness         1\n",
+       "audio_features.acousticness        0\n",
+       "audio_features.instrumentalness    0\n",
+       "audio_features.liveness            1\n",
+       "audio_features.valence             0\n",
+       "audio_features.tempo               0\n",
+       "audio_features.id                  0\n",
+       "audio_features.time_signature      1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Revisar los datos nulos.\n",
+    "data_audio_features.isnull().sum()"
    ]
   }
  ],
